# VitalVision

./: .gitignore  LICENSE  README.md
core/: Cargo.toml  build-ios.sh  build-py.sh  build-rust.sh  build.rs
core/src/: lib.rs  log.rs  main.rs  mock.rs  vvcore.udl
core/src/analysis/: ecg.rs  filter.rs  mod.rs  plotters.rs  ppg.rs  tests.rs
core/src/ble/: ble_date_converter.rs  mock.rs  mod.rs
core/src/storage/: mod.rs  ringbuffer.rs
core/src/tests/: playground_btleplug.rs
core/tests/: playground_async_storage.rs  playground_btleplug.rs  playground_rwlock.rs
ios/VitalVision/: AppConfig.swift  ChannelView.swift  ContentView.swift  DeviceView.swift  NotificationService.swift  SaveDataModifier.swift  SettingsView.swift  VVCoreCollector.swift  VitalVisionApp.swift  VitalVisionCore.swift
ios/VitalVision.xcodeproj/: project.pbxproj
ios/VitalVisionTests/: VitalVisionTests.swift
ios/VitalVisionUITests/: VitalVisionUITests.swift  VitalVisionUITestsLaunchTests.swift
signal/VitalVision-signal-playground/: Pipfile
signal/VitalVision-signal-playground/notebooks/: 00_butterworth_bandpass.ipynb  01_ppg_tests.ipynb  02_ecg_tests.ipynb
signal/VitalVision-signal-playground/notebooks/heartpy/: Analysing_a_PPG_signal.ipynb  Analysing_a_regular_ECG_signal.ipynb
signal/evaluation/: 00_bindings.ipynb  00_data_loading.ipynb  vvcore
signal/playground/: 01_ppg_tests.ipynb  02_ecg_tests.ipynb
