[package]
name = "vvcore"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "vvcore"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
uniffi = { version = "0.26.1", features = ["build"] }
btleplug = "0.11.5"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
uuid = { version = "1.7.0", features = ["v4"] }
rand = "0.8.5"

[build-dependencies]
uniffi_build = "0.26.1"
uniffi_bindgen = "0.26.1"
