[package]
name = "vvcore"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "vvcore"


[dependencies]
uniffi = { version = "0.26.1", features = ["build"] }
btleplug = "0.11.5"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
uuid = { version = "1.7.0", features = ["v4"] }
rand = "0.8.5"
chrono = "0.4.19"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
noisy_float = "0.2.0"
biquad = "0.4.2"
find_peaks = "0.1.5"
tokio-stream = "0.1.15"
slog = { version = "2.7", features = ["release_max_level_debug"] }
slog-term = "2.9"
slog-async = "2.7"

[dev-dependencies]
plotters = "0.3.5"

[build-dependencies]
uniffi_build = "0.26.1"
uniffi_bindgen = "0.26.1"
